--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -1016,9 +1016,21 @@
     },
     {
       "cell_type": "markdown",
+      "id": "0c81eda4",
+      "metadata": {},
+      "source": [
+        "Предположение о том, что при применении аугментации, изменении шага обучения и количества эпох удастся добиться более высоких показателей по метрикам оценки у самостоятельно реализованной модели, оказалось ошибочным. Модель обучилась хуже чем на стандартном бейзлайне, думаю нужно было еще поиграться с параметрами и улучшить реализацию, так как написана она сейчас очень упрощенно, соответственно сеть сильно проигрывает по показателям U-Net из библиотеки."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "032e0507",
       "metadata": {},
-      "source": []
+      "source": [
+        "## Выводы\n",
+        "\n",
+        "В результате выполнения данной лабораторной работы было проведено исследование архитектуры U-Net для задач семантической сегментаци и была написана своя собственная реализация модели. Дообученная сеть U-Net показывает очень хорошие результаты, особенно при использовании энкодера resnet50. Таких же хороших результатов при самостоятельной реализации добиться не удалось, но это в принципе ожидаемо так как свою сеть приходилось обучать с нуля."
+      ]
     }
   ],
   "metadata": {
@@ -1028,7 +1040,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
